devtools/client/themes/storage.css
#
storage
-
tree
{
min
-
width
:
220px
;
max
-
width
:
500px
;
overflow
:
auto
;
}
#
storage
-
tree
{
background
:
var
(
-
-
theme
-
sidebar
-
background
)
;
}
#
storage
-
tree
{
-
moz
-
user
-
focus
:
normal
;
}
#
storage
-
tree
:
focus
{
outline
:
0
;
}
#
storage
-
table
{
-
moz
-
user
-
focus
:
normal
;
}
#
storage
-
table
:
focus
{
outline
:
0
;
}
.
table
-
widget
-
cell
{
min
-
width
:
unset
;
}
#
name
{
min
-
width
:
65px
;
}
#
host
{
min
-
width
:
80px
;
}
#
path
{
min
-
width
:
60px
;
}
#
expires
#
lastAccessed
#
creationTime
{
min
-
width
:
115px
;
}
#
value
{
min
-
width
:
95px
;
}
#
hostOnly
#
isHttpOnly
#
sameSite
{
min
-
width
:
58px
;
}
#
isSecure
{
min
-
width
:
48px
;
}
#
storage
-
table
input
{
-
moz
-
appearance
:
none
;
-
moz
-
box
-
flex
:
1
;
position
:
relative
;
box
-
sizing
:
border
-
box
;
padding
:
0
2px
;
font
:
inherit
;
color
:
var
(
-
-
theme
-
text
-
color
-
strong
)
;
background
-
color
:
var
(
-
-
theme
-
body
-
background
)
;
}
#
storage
-
table
input
:
focus
{
outline
:
1px
solid
var
(
-
-
blue
-
50
)
;
}
#
storage
-
sidebar
{
max
-
width
:
500px
;
min
-
width
:
250px
;
}
#
storage
-
toolbar
{
display
:
-
moz
-
box
;
}
#
storage
-
searchbox
{
-
moz
-
box
-
flex
:
1
;
}
#
storage
-
toolbar
.
add
-
button
:
:
before
{
background
-
image
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
add
.
svg
"
)
;
-
moz
-
user
-
focus
:
normal
;
}
#
storage
-
toolbar
.
refresh
-
button
:
:
before
{
background
-
image
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
reload
.
svg
"
)
;
-
moz
-
user
-
focus
:
normal
;
}
#
storage
-
toolbar
.
devtools
-
button
{
min
-
width
:
0
;
}
#
storage
-
toolbar
.
devtools
-
button
hbox
#
storage
-
toolbar
.
sidebar
-
toggle
[
hidden
]
{
display
:
none
;
}
media
(
max
-
width
:
700px
)
{
#
storage
-
tree
#
storage
-
sidebar
{
max
-
width
:
100
%
;
}
#
storage
-
table
#
path
{
display
:
none
;
}
}

