Bug 1584742 - Adjust input and button spacing in Storage toolbars; r=miker
Differential Revision: https://phabricator.services.mozilla.com/D47538

UltraBlame original commit: 1d784723643de1adb582612744b37792b03b642d

--- a/devtools/client/themes/storage.css
+++ b/devtools/client/themes/storage.css
@@ -302,6 +302,22 @@ width
 #
 storage
 -
+sidebar
+.
+devtools
+-
+toolbar
+{
+padding
+-
+inline
+:
+0
+;
+}
+#
+storage
+-
 toolbar
 {
 display
@@ -325,6 +341,23 @@ box
 flex
 :
 1
+;
+margin
+-
+inline
+-
+start
+:
+-
+3px
+;
+margin
+-
+inline
+-
+end
+:
+1px
 ;
 }
 #
